[project]
name = "seismic-data-pipeline"
version = "0.1.0"
description = "Package to get seismic data from Guralp digitisers via HTTP requests"
readme = "README.md"
author= "Joseph Asplet, University of Oxford <joseph.asplet@earth.ox.ac.uk>"
urls = "https://github.com/Jasplet/nymar-data-pipeline"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.13.3",
    "numpy>=2.2.6",
    "obspy>=1.4.2",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
