[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "seismic-data-pipeline"
version = "0.1.0"
description = "Package to get seismic data from Guralp digitisers via HTTP requests"
readme = "README.md"
authors = [{name = "Joseph Asplet", email = "joseph.asplet@earth.ox.ac.uk"}]
license = "MIT"
license-files = ["LICENSE.md"]

requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.13.3",
    "numpy>=2.2.6",
    "obspy>=1.4.2",
    "pyyaml>=6.0.3",
]

[project.urls]
github = "https://github.com/Jasplet/nymar-data-pipeline"

[dependency-groups]
dev = [
    "asyncmock>=0.4.2",
    "ipython>=8.38.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.11",
]
